--- a/views/listpost.ejs
+++ b/views/listpost.ejs
@@ -89,7 +89,8 @@
             onclick="document.getElementById('boardbtn').submit();">게시판</a>
         </form>
         <a href="/public/amateurPirates.html" class="list-group-item list-group-item-action bg-light">게임</a>
-        <a href="/public/Three.js/skeleton.html" class="list-group-item list-group-item-action bg-light">Three.js 연습장</a>
+        <a href="/public/Three.js/skeleton.html" class="list-group-item list-group-item-action bg-light">Three.js
+          연습장</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -142,51 +143,37 @@
 
         <div class="ui blue fluid card">
           <div class="content">
-            <div class="ui grid">
-              <div class="two wide column"></div>
-              <div class="eight wide column"></div>
-              <div class="two wide column"></div>
-              <div class="two wide column"></div>
-              <div class="two wide column"></div>
-            </div>
-
-            <div class="ui very relaxed selection celled list">
-              <% 
-                      const noStart = (pageCount - page) * perPage; 
-                      for(let i = 0; i < posts.length; i++){ 
-                          const curTitle = posts[i]._doc.title; 
-                          const curContents = posts[i]._doc.contents; 
-                          const curWriter = posts[i]._doc.writer.name; 
-                          const curNo = noStart - i; 
-                          const curviews = posts[i]._doc.views;
-                          const createdTime = moment(posts[i]._doc.created_at).tz("Asia/Seoul").format("MMM Do");
-                      %>
-              <div class="item">
-                <div class="ui grid">
-                  <div class="two wide column"><%= curNo %></div>
-                  <div class="eight wide column">
-                    <h4 class="ui left aligned header"
+            <table class="ui striped table">
+              <tread>
+              </tread>
+              <tbody>
+                <% 
+                              const noStart = (pageCount - page) * perPage; 
+                              for(let i = 0; i < posts.length; i++){ 
+                                  const curTitle = posts[i]._doc.title; 
+                                  const curContents = posts[i]._doc.contents; 
+                                  const curWriter = posts[i]._doc.writer.name; 
+                                  const curNo = noStart - i; 
+                                  const curviews = posts[i]._doc.views;
+                                  const createdTime = moment(posts[i]._doc.created_at).tz("Asia/Seoul").format("MMM Do");
+                              %>
+                <tr>
+                  <td class="collapsing">
+                    <%= curNo %>
+                  </td>
+                  <td>
+                    <a class="ui left aligned header"
                       onclick="javascript : window.location = '/process/showpost/<%= posts[i]._id%>'">
-                      <%= curTitle %>
-                    </h4>
-                  </div>
-                  <div class="two wide column">
-                    <h5 class="ui left aligned orange header">
-                      <%= curWriter%>
-                    </h5>
-                  </div>
-                  <div class="two wide column">
-                    <h5 class="ui left aligned orange header">
-                      <%= createdTime %>
-                    </h5>
-                  </div>
-                  <div class="two wide column">
-                    <%= curviews %>
-                  </div>
-                </div>
-              </div>
-              <% } %>
-            </div>
+                      <h6><%= curTitle %></h6>
+                    </a>
+                  </td>
+                  <td class="right aligned collapsing"><%= curWriter%></td>
+                  <td class="right aligned collapsing"><%= createdTime %></td>
+                  <td class="left aligned collapsing"><i class="eye icon"></i><%= curviews %></td>
+                </tr>
+                <% } %>
+              </tbody>
+            </table>
             <br />
             <div id="page_button" class="tiny ui basic buttons">
               <% if(page > 0){ %>
