--- a/views/listpost.ejs
+++ b/views/listpost.ejs
@@ -99,8 +99,7 @@
     <div id="page-content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-
+        <button class="btn btn-primary btn-lg" id="menu-toggle"><i class="bars icon"></i></button>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -139,10 +138,9 @@
 
       <div class="container">
         <br />
-        <a class="ui blue label">게시판</a>
-
         <div class="ui blue fluid card">
           <div class="content">
+            <div class="ui blue label">게시판</div>
             <table class="ui tablet stackable striped table">
               <thead>
                 <tr>
@@ -246,7 +244,7 @@
             </div>
             <br /><br />
             <a class="ui button" href="/process/listpost?page=<%= page %>&perPage=<%= perPage%>">새로고침</a>
-            <a class="ui button" href="/process/addpost">글쓰기</a>
+            <a class="ui button" href="/process/addpost" style="background-color:dodgerblue; color:white">새 글쓰기</a>
           </div>
         </div>
       </div>
