--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -16,7 +16,7 @@
   <!-- Custom styles for this template -->
   <!-- <link href="css/simple-sidebar.css" rel="stylesheet"> -->
   <link href="/public/css/simple-sidebar.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="/public/semantic/out/semantic.min.css" />
 </head>
 
 <body>
@@ -45,8 +45,7 @@
     <div id="page-content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-
+        <button class="btn btn-primary btn-lg" id="menu-toggle"><i class="bars icon"></i></button>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -95,7 +94,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="/public/vendor/jquery/jquery.min.js"></script>
   <script src="/public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="/public/semantic/out/semantic.min.js"></script>
   <!-- Menu Toggle Script -->
   <script>
     $("#menu-toggle").click(function (e) {
