--- a/views/updatepost.ejs
+++ b/views/updatepost.ejs
@@ -103,7 +103,7 @@
         <a href="/">Sejin Board </a>
       </div>
       <div class="list-group list-group-flush">
-        <form id="boardbtn" method="post" action="/process/listpost">
+        <form id="boardbtn" method="post" action="/board/listpost">
           <input type="hidden" name="page" value="0" />
           <input type="hidden" name="perPage" value="5" />
           <a href="#" class="list-group-item list-group-item-action bg-light"
@@ -159,7 +159,7 @@
 
       <div class="container-fluid">
         <div id="cardbox" class="ui blue fluid card">
-          <form class="content ui form" method="post" action="/process/updatepost" , onsubmit="return validateForm();">
+          <form class="content ui form" method="post" action="/board/updatepost" , onsubmit="return validateForm();">
             <h4 class="ui dividing header">글 수정</h4>
             <div class="two fields">
               <div class="field">
