--- a/views/gamepage.ejs
+++ b/views/gamepage.ejs
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Sejin Board</title>
+  <title>AmateurPirates</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -15,6 +15,8 @@
   <!-- <link href="css/simple-sidebar.css" rel="stylesheet"> -->
   <link href="/public/css/simple-sidebar.css" rel="stylesheet">
   <link rel="stylesheet" href="/public/semantic/out/semantic.min.css" />
+  <link rel="shortcut icon" href="/public/amateurPirates/TemplateData/favicon.ico">
+  <link rel="stylesheet" href="/public/amateurPirates/TemplateData/style.css">
 </head>
 
 <body>
@@ -75,9 +77,14 @@
           </ul>
         </div>
       </nav>
-      <div class="container-fluid">
-        <h1 class="mt-4">Sejin Board</h1>
-      </div>
+        <div class="webgl-content">
+          <div id="gameContainer" style="width: 960px; height: 600px"></div>
+          <div class="footer">
+            <div class="webgl-logo"></div>
+            <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
+            <div class="title">AmateurPirates</div>
+          </div>
+        </div>
     </div>
     <!-- /#page-content-wrapper -->
   </div>
@@ -86,12 +93,47 @@
   <script src="/public/vendor/jquery/jquery.min.js"></script>
   <script src="/public/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/public/semantic/out/semantic.min.js"></script>
+  <script src="/public/amateurPirates/TemplateData/UnityProgress.js"></script>
+  <script src="/public/amateurPirates/Build/UnityLoader.js"></script>
+  <script>
+    // var gameInstance = UnityLoader.instantiate("gameContainer", "./Build/webglbulid.json", {onProgress: UnityProgress});
+    var gameInstance = UnityLoader.instantiate("gameContainer", "/public/amateurPirates/Build/webglbulid.json", { onProgress: UnityProgress });
+  </script>
   <!-- Menu Toggle Script -->
   <script>
     $("#menu-toggle").click(function (e) {
       e.preventDefault();
       $("#wrapper").toggleClass("toggled");
     });
+  </script>
+  <script>
+$(document).unbind('keydown').bind('keydown', function (event) {
+    if (event.keyCode === 8) {
+        var doPrevent = true;
+        var types = ["text", "password", "file", "search", "email", "number", "date", "color", "datetime", "datetime-local", "month", "range", "search", "tel", "time", "url", "week"];
+        var d = $(event.srcElement || event.target);
+        var disabled = d.prop("readonly") || d.prop("disabled");
+        if (!disabled) {
+            if (d[0].isContentEditable) {
+                doPrevent = false;
+            } else if (d.is("input")) {
+                var type = d.attr("type");
+                if (type) {
+                    type = type.toLowerCase();
+                }
+                if (types.indexOf(type) > -1) {
+                    doPrevent = false;
+                }
+            } else if (d.is("textarea")) {
+                doPrevent = false;
+            }
+        }
+        if (doPrevent) {
+            event.preventDefault();
+            return false;
+        }
+    }
+});
   </script>
 </body>
 </html>
