--- a/views/openpost.ejs
+++ b/views/openpost.ejs
@@ -102,7 +102,7 @@
           <a href="#" class="list-group-item list-group-item-action bg-light"
             onclick="document.getElementById('boardbtn').submit();">게시판</a>
         </form>
-        <a href="/public/amateurPirates.html" class="list-group-item list-group-item-action bg-light">게임</a>
+        <a href="/game/playgame" class="list-group-item list-group-item-action bg-light">게임</a>
         <a href="/public/Three.js/skeleton.html" class="list-group-item list-group-item-action bg-light">Three.js
           연습장</a>
       </div>
