--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -13,6 +13,7 @@
   <link href="/public/css/simple-sidebar.css" rel="stylesheet">
 
   <% const curTitle = posts._doc.title; 
+  const postObjId = posts._doc._id;
   const curContents = posts._doc.contents; 
   const curWriter = posts._doc.writer.name;
   const curWriterEmail = posts._doc.writer.email;
@@ -159,7 +160,7 @@
             <form id="" method="post" action="/board/newcomment" , onsubmit="return commentConfirmForm();"
               style="padding-bottom: 50px;">
               <input type="hidden" name="commentWriterObjId" value="<%= user._id%>" />
-              <input type="hidden" name="postObjId" value="<%= posts._doc._id%>" />
+              <input type="hidden" name="postObjId" value="<%= postObjId%>" />
               <textarea name="comment" class="form-control" style="min-width:100%" placeholder="댓글을 입력하세요."></textarea>
               <br />
               <input class="ui submit button" type="submit" value="작성" , name=""
@@ -175,6 +176,7 @@
                         const comment = posts._doc.comments[i].contents;
                         const commentWriterName = posts._doc.comments[i].writer.name;
                         const commentWriterEmail = posts._doc.comments[i].writer.email;
+                        const commentWriterObjId = posts._doc.comments[i].writer._id;
                         const commentObjId = posts._doc.comments[i]._id;
                         const createdTime = moment(posts._doc.comments[i].created_at).tz("Asia/Seoul").format("MMM Do");
                     %>
@@ -188,14 +190,13 @@
                     <% if(user && (commentWriterEmail === user.email)) { %>
                     <form id="" method="post" action="/board/deletecomment" , onsubmit="return delConfirmForm();"
                       style="float: right">
-                      <input type="hidden" name="postId" value="<%= posts._doc._id %>" />
+                      <input type="hidden" name="postId" value="<%= postObjId %>" />
                       <input type="hidden" name="commentObjId" value="<%= commentObjId %>" />
                       <input class="btn btn-default btn-sm" type="submit" value="삭제" , name=""
                         style="background-color:gray; color:white" />
                     </form>
-                    <!-- <a class="btn btn-default btn-sm" href="/board/updatecomment/<%= posts._doc._id %>" style="background-color:gray; color:white; float: right">수정</a> -->
-                    <a class="btn btn-default btn-sm" style="background-color:gray; color:white; float: right"
-                      onclick="createUpdateCommentBox('<%= i%>', '<%= comment%>', '<%= commentWriterName%>', '<%= createdTime%>', '<%= posts._doc._id %>', '<%= commentObjId%>');">수정</a>
+                    <a class="btn btn-default btn-sm" style="background-color:gray; color:white; float: right; margin-right:5px;"
+                      onclick="createUpdateCommentBox('<%= i%>', '<%= comment%>', '<%= commentWriterName%>', '<%= createdTime%>', '<%= postObjId%>', '<%= commentObjId%>', '<%= user._id%>');">수정</a>
                     <% } %>
                   </td>
                 </tr>
@@ -256,8 +257,8 @@
       else
         return false;
     };
-    const cancelUpdateCommentBox = (commentIdx, comment, commentWriterName, createdTime, postObjId, commentObjId) => {
-      console.log(commentIdx, comment, commentWriterName, createdTime, postObjId, commentObjId);
+    const cancelUpdateCommentBox = (commentIdx, comment, commentWriterName, createdTime, postObjId, commentObjId, userObjId) => {
+      console.log(commentIdx, comment, commentWriterName, createdTime, postObjId, commentObjId, userObjId);
       document.getElementById(`commentTr_${commentIdx}`).innerHTML = `
       <td class="ten wide left aligned">
         ${comment}
@@ -270,18 +271,21 @@
           <input type="hidden" name="commentObjId" value="${commentObjId}" />
           <input class="btn btn-default btn-sm" type="submit" value="삭제" , name="" style="background-color:gray; color:white" />
         </form>        
-        <a class="btn btn-default btn-sm" style="background-color:gray; color:white; float: right" onclick="createUpdateCommentBox('${commentIdx}', '${comment}', '${commentWriterName}', '${createdTime}', '${postObjId}', '${commentObjId}');">수정</a>
+        <a class="btn btn-default btn-sm" style="background-color:gray; color:white; float: right; margin-right:5px;" onclick="createUpdateCommentBox('${commentIdx}', '${comment}', '${commentWriterName}', '${createdTime}', '${postObjId}', '${commentObjId}', '${userObjId}');">수정</a>
       </td>`
     };
-    const createUpdateCommentBox = (commentIdx, comment, commentWriterName, createdTime, postObjId, commentObjId) => {
-      console.log(commentIdx, comment, commentWriterName, createdTime, postObjId, commentObjId);
+    const createUpdateCommentBox = (commentIdx, comment, commentWriterName, createdTime, postObjId, commentObjId, userObjId) => {
+      console.log(commentIdx, comment, commentWriterName, createdTime, postObjId, commentObjId, userObjId);
       document.getElementById(`commentTr_${commentIdx}`).innerHTML = `
-      <td class='ten wide left aligned'>
-        <textarea name='commentUpdate' class='form-control' >${comment}</textarea>
-      </td>
-      <td class='six wide right aligned'>
-        <a class="btn btn-default btn-sm" style="background-color:gray; color:white; float: right">확인</a>
-        <a class="btn btn-default btn-sm" style="background-color:gray; color:white; float: right" onclick="cancelUpdateCommentBox('${commentIdx}', '${comment}', '${commentWriterName}', '${createdTime}', '${postObjId}', '${commentObjId}');">취소</a>
+      <td class='sixteen' wide left aligned' colspan="2">
+        <form id="" method="post" action="/board/updatecomment" , onsubmit="return commentConfirmForm();" style="padding-bottom: 20px;">
+          <input type="hidden" name="commentObjId" value="${commentObjId}" />
+          <input type="hidden" name="postObjId" value="${postObjId}" />
+          <textarea name='updatedComment' class='form-control' >${comment}</textarea>
+          <br />
+          <a class="btn btn-default btn-sm" style="background-color:gray; color:white; float: right" onclick="cancelUpdateCommentBox('${commentIdx}', '${comment}', '${commentWriterName}', '${createdTime}', '${postObjId}', '${commentObjId}', '${userObjId}');">취소</a>
+          <input class="btn btn-default btn-sm" type="submit" value="확인" , name="" style="background-color:gray; color:white; float: right; margin-right:5px;" />
+        </form>
       </td>`
     };
   </script>
