Add GameKey Info

--- a/views/gamepage.ejs
+++ b/views/gamepage.ejs
@@ -84,6 +84,10 @@
             <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
             <div class="title">AmateurPirates</div>
           </div>
+          <div style="text-align: center;">
+            <div><b>방향이동 : 좌우 화살표</b></div>
+            <div><b>점프 : 스페이스바</b></div>
+          </div>
         </div>
     </div>
     <!-- /#page-content-wrapper -->
